<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SendInviteCodeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="@dimen/_30sdp">


        <com.drivingschool.android.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/share_this"
            android:textAppearance="@style/TextViewBold"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <com.drivingschool.android.customviews.CustomTextView
            android:id="@+id/txtRandomCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="XBC-KDV"
            android:textAppearance="@style/TextViewBold"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sdp" />

        <com.drivingschool.android.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/thiscode"
            android:textAppearance="@style/TextViewMedium"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <com.drivingschool.android.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@mipmap/ic_sharecode"
            android:gravity="center"
            android:text="@string/at_least_one_member"
            android:textSize="@dimen/_12sdp" />


        <com.drivingschool.android.customviews.CustomTextView
            android:id="@+id/txtSendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/rounded_layout"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/sendcode"
            android:textColor="@color/black"
            android:textAppearance="@style/TextViewBold"
            android:textSize="@dimen/_13sdp" />


        <com.drivingschool.android.customviews.CustomTextView
            android:id="@+id/txtDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_2sdp"
            android:text="@string/done"
            android:textAppearance="@style/TextViewMedium"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>




</RelativeLayout>