<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp"
    android:background="@color/black"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.drivingschool.android.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/my_groups"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgrey">

            <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/tvGName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:drawableLeft="@mipmap/ic_success"
                android:gravity="center"
                android:text="@string/family"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/txtCreateGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/border_bg"
                android:gravity="center"
                android:padding="6dp"
                android:textSize="@dimen/_10sdp"
                android:text="@string/create_group"
                android:textColor="@color/black" />

            <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/txtJoinGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/border_bg"
                android:gravity="center"
                android:padding="6dp"
                android:textSize="@dimen/_10sdp"                android:text="@string/join_group"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
