<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MessagesActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="@dimen/_30sdp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_mess1"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_mess2"
                android:tint="@color/red"
                />

        </LinearLayout>

        <com.drivingschool.android.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/add_members_to_send_messages"
            android:textAppearance="@style/TextViewBold"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <com.drivingschool.android.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/at_least_one_member"
            android:textSize="@dimen/_12sdp" />


        <com.drivingschool.android.customviews.CustomTextView
            android:id="@+id/txtAddMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/rounded_layout"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/add_a_new_member"
            android:textColor="@color/black"
            android:textAppearance="@style/TextViewBold"
            android:textSize="@dimen/_13sdp" />




    </LinearLayout>




</RelativeLayout>