<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.FirstActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:background="@drawable/background" />


        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_30sdp">

            <com.drivingschool.android.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:padding="@dimen/_5sdp"
                android:text="@string/welcome_text"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <com.drivingschool.android.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/app_name"
                android:textAppearance="@style/TextViewBold"
                android:textColor="@color/white"
                android:textSize="@dimen/_22sdp" />


            <com.drivingschool.android.customviews.CustomTextView
                android:id="@+id/txtGetStarted"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rounded_layout"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/get_started"
                android:textAppearance="@style/TextViewBold"
                android:textColor="@color/lightblack"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.drivingschool.android.customviews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <com.drivingschool.android.customviews.CustomTextView
                    android:id="@+id/textLoginIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Log In"
                    android:textAppearance="@style/TextViewBold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>