<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efeeee"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.DriveDetectionActivity">

    <com.drivingschool.android.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My drive detection:"
        android:textColor="@color/grey"
        android:padding="@dimen/_7sdp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/white"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageUser"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/image_pic"
            app:civ_border_color="#faf9f9"
            app:civ_border_width="3dp"
            android:layout_gravity="bottom|center_horizontal"/>


        <com.drivingschool.android.customviews.CustomTextView
            android:id="@+id/txtUserName"
            android:layout_toRightOf="@id/imageUser"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:text="User Name"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="true"
            android:layout_margin="10dp"
            />
    </RelativeLayout>

    <com.drivingschool.android.customviews.CustomTextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAppearance="@style/TextViewBold"
        android:text="@string/each_group"/>

    <com.drivingschool.android.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:text="@string/please_note"/>

    <com.drivingschool.android.customviews.CustomTextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textAppearance="@style/TextViewBold"
        android:text="When this feature is off:"/>

    <com.drivingschool.android.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:text="@string/your_drives_will"/>

</LinearLayout>